# CodeCompletion

./: .gitignore  Novelty.md  README.md  co_retrieval_cli.py  evaluate.py  graphcoder_cli.py  inference.py  pyproject.toml  repository_explanation.md  research.txt  train.py
data/: ast_parser.py  dataset_loader.py
generator/: causal_prompt.py  deepseek_generator.py
retriever/: graph_retriever.py  iterative_retriever.py  quantum_fidelity_deviation.md  quantum_retriever.py  query_prober.py  unixcoder_retriever.py
rl/: cahm_engine.py  ppo_trainer.py  reward_model.py  static_checker.py
scripts/: run_ablation_study.sh  run_research_questions.sh
src/co_retrieval/: __init__.py  chunking.py  context_utility.py  dense_retriever.py  embedding_cache.py  intent.py  neural_gate.py  neural_training.py  quality_metrics.py  runner.py  soft_prompt.py  training.py
src/co_retrieval/cli/: __init__.py  co_retrieval_cli.py  config.py
src/co_retrieval/data/: __init__.py  left_context_anchor_extractor.py  repository_dataset_loader.py
src/graphcoder_rl/: __init__.py
src/graphcoder_rl/cache/: __init__.py  ppl_entropy_cache.py  repository_graph_cache.py
src/graphcoder_rl/cli/: __init__.py  config.py  graphcoder_cli.py
src/graphcoder_rl/data/: __init__.py  left_context_anchor_extractor.py  repository_dataset_loader.py
src/graphcoder_rl/evaluation/: __init__.py  graphcoder_rl_eval.py
src/graphcoder_rl/generation/: __init__.py  code_llm_generator.py  (+2 more)
tests/: test_chunking.py  test_cli_config.py  test_intent_utility.py  test_neural_alignment.py  test_training.py
(+22 files in other folders)
